Shtimi i inputit ne Home Page

--- a/weather-app/templates/views/index.hbs
+++ b/weather-app/templates/views/index.hbs
@@ -15,7 +15,20 @@
     <h1> {{title}} </h1>
     {{>header}}
 
+    <form class="weatherLocation">
+        <input type="text" placeholder="Address">
+        <button> Search</button>
+    </form>
+
+    <div class="weatherInfo">
+        <div class="temperature"></div>
+        <div class="description"></div>
+        <div class="place"></div>
+    </div>
+
     {{>footer}}
+
+    <script src="js/script.js"></script>
 </body>
 
 </html>
